feat: new olap api
